Updated demo html file

--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,9 @@
 
 </head>
 <body>
-<h1>Press the following key codes</h1>
+<h1>Press the following key codes to trigger the cheat</h1>
+
+<h1 style="font-size: 30px">&#x2190; &#x2192; &#x2191; &#x2193;</h1>
 
 <script src="./cheatCode.js"></script>
 </body>
